修改社员运营页面样式

--- a/WebContent/crm/youyi_product.html
+++ b/WebContent/crm/youyi_product.html
@@ -799,7 +799,7 @@
                     }
                 },
                 legend: {
-                    data:['城市']
+                    data:['动销率']
                 },
                 grid: {
                     left: '10%',
@@ -831,7 +831,7 @@
                 ],
                 series : [
                     {
-                        name:'城市',
+                        name:'动销率',
                         type:'bar',
                         barWidth: 40,                   // 系列级个性化，柱形宽度
                         itemStyle: {
