添加功能入口

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -159,7 +159,9 @@
                                     </dl>
                                     <dl class="col-sm-3" id="user_model">
                                         <dt><i></i>用户模型</dt>
-                                        <dd><a href="javascript:goTosjfxIndex()"><span class="fa fa-street-view"></span>用户画像</a></dd>
+                                        <dd><a href="javascript:goToUserInfo()"><span class="fa fa-hourglass-half"></span>用户简报</a></dd>
+                                        <dd><a href="javascript:goToMemberInfo()"><span class="fa fa-group"></span>社员简报</a></dd>
+                                        <!--<dd><a href="javascript:goTosjfxIndex()"><span class="fa fa-street-view"></span>用户画像</a></dd>-->
                                     </dl>
                                 </div>
                             </div>
