修改用户简报菜单名称

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -159,9 +159,9 @@
                                     </dl>
                                     <dl class="col-sm-3" id="user_model">
                                         <dt><i></i>用户模型</dt>
-                                        <dd><a href="javascript:goToUserInfo()"><span class="fa fa-hourglass-half"></span>用户简报</a></dd>
-                                        <dd><a href="javascript:goToMemberInfo()"><span class="fa fa-group"></span>社员简报</a></dd>
-                                        <!--<dd><a href="javascript:goTosjfxIndex()"><span class="fa fa-street-view"></span>用户画像</a></dd>-->
+                                        <dd style="position:relative"><a href="javascript:goToUserAnalysis()"><span class="fa fa-bar-chart"></span>用户简报</a>
+                                            <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
+                                        <dd><a href="javascript:goTosjfxIndex()"><span class="fa fa-street-view"></span>用户画像</a></dd>
                                     </dl>
                                 </div>
                             </div>
@@ -204,8 +204,7 @@
                                     <dl class="col-sm-3">
                                         <dt><i></i>分析图</dt>
                                         <dd><a href="javascript:gotok()"><span class="fa fa-line-chart"></span>营业额分析</a></dd>
-                                        <dd style="position:relative"><a href="javascript:goToUserAnalysis()"><span class="fa fa-bar-chart"></span>用户运营分析</a>
-                                            <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
+                                         <dd class="logo-prohibit"><a href="javascript:js_alert()"><span class="fa fa-bar-chart"></span>用户分析</a></dd>
 										<!-- <dd><a href="javascript:goto_user_k()"><span class="fa fa-bar-chart"></span>用户分析</a></dd> -->
                                     </dl>
                                     <dl class="col-sm-3">
