--- a/WebContent/crm/member_info.html
+++ b/WebContent/crm/member_info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>社员简报</title>
+    <title>社员运营</title>
     <!-- Tell the browser to be responsive to screen width -->
     <link rel="shortcut icon" type="image/x-icon" href="../icon.png" />
     <meta content="width=device-width, initial-scale=0.3, maximum-scale=1, user-scalable=yes" name="viewport">  <!-- Bootstrap 3.3.6 -->
@@ -165,7 +165,7 @@
                 <div class="pull-left">
                     <div class="logo-lg">
                         <ul class="no-margin">
-                            <li class="current"><em>社员简报</em></li>
+                            <li class="current"><em>社员运营</em></li>
                         </ul>
                     </div>
                 </div>
@@ -831,7 +831,7 @@
                                     }
                                 }
                             }
-                            pdf.save('社员简报.pdf');
+                            pdf.save('社员运营简报.pdf');
                             $("#process_div_pic").hide();
                             $("#process_div").hide();
                         }
