优化用户简报sql查询

--- a/WebContent/crm/user_analysis.html
+++ b/WebContent/crm/user_analysis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>用户运营分析</title>
+    <title>用户简报</title>
     <link rel="shortcut icon" type="image/x-icon" href="../icon.png" />
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -111,7 +111,7 @@
                 <div class="pull-left">
                     <div class="logo-lg">
                         <ul class="no-margin">
-                            <li class="current"><em>用户运营分析</em></li>
+                            <li class="current"><em>用户简报</em></li>
                         </ul>
                     </div>
                 </div>
@@ -1180,7 +1180,7 @@
                             }
                         }
                     }
-                    pdf.save('用户分析报告.pdf');
+                    pdf.save('用户简报.pdf');
                     $("#process_div_pic").hide();
                     $("#process_div").hide();
                 }
