--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -161,7 +161,9 @@
                                         <dt><i></i>用户模型</dt>
                                         <dd style="position:relative"><a href="javascript:goToUserAnalysis()"><span class="fa fa-bar-chart"></span>用户简报</a>
                                             <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
-                                        <dd><a href="javascript:goTosjfxIndex()"><span class="fa fa-street-view"></span>用户画像</a></dd>
+                                        <dd style="position:relative"><a href="javascript:goToMemberInfo()"><span class="fa fa-group"></span>社员简报</a>
+                                            <img alt="" src="dist/img/new_1.gif" style="position:absolute; top:5px; width:25px; height:19px;"></dd>
+                                        <!--<dd><a href="javascript:goTosjfxIndex()"><span class="fa fa-street-view"></span>用户画像</a></dd>-->
                                     </dl>
                                 </div>
                             </div>
