修改用户简报城市分布扇区角度

--- a/WebContent/crm/user_analysis.html
+++ b/WebContent/crm/user_analysis.html
@@ -658,10 +658,10 @@
         },
         color: ['#fd9173', '#f36f8a', '#5f71d2', '#42a4eb', '#4ac7f5'],
         series: [{
-            name: '违规次数',
+            name: '用户数',
             type: 'pie',
             clockwise: false, //饼图的扇区是否是顺时针排布
-            minAngle: 20, //最小的扇区角度（0 ~ 360）
+            // minAngle: 20, //最小的扇区角度（0 ~ 360）
             center: ['45%', '53%'], //饼图的中心（圆心）坐标
             radius: ['40%', '80%'], //饼图的半径
             avoidLabelOverlap: true, ////是否启用防止标签重叠
@@ -701,7 +701,7 @@
             type: 'pie',
             clockwise: false,
             silent: true,
-            minAngle: 20, //最小的扇区角度（0 ~ 360）
+            // minAngle: 20, //最小的扇区角度（0 ~ 360）
             center: ['45%', '53%'], //饼图的中心（圆心）坐标
             radius: ['0%', '37%'], //饼图的半径
             itemStyle: { //图形样式
