修改图表显示文案

--- a/WebContent/crm/user_analysis.html
+++ b/WebContent/crm/user_analysis.html
@@ -799,7 +799,7 @@
     var userPayData = new Array();
     option6 = {
         title: [ {
-            text: '消费频次分布',
+            text: '用户数分布 - 客户黏性',
             x: 'left',
             top: '10px',
             textStyle: {
