添加明查修改城市权限

--- a/WebContent/data_access/observeOrgTree.html
+++ b/WebContent/data_access/observeOrgTree.html
@@ -82,7 +82,7 @@
 	<body>
 		<div class="panel panel-primary" style="margin-bottom: 0;height: 100%">
 			<div class="panel-heading">
-				角色组所在机构
+				明查模块
 			</div>
 			<div class="panel-body" style="height: 90%;padding: 0">
 				<ul id="groupTree" class="tree" style="border:none;width:auto;background: transparent;">
